@@ -4,7 +4,7 @@
 # Project related configuration options
 #---------------------------------------------------------------------------
 PROJECT_NAME           = pcmanx_pure_gtk2
-PROJECT_NUMBER         = @PACKAGE_VERSION@
+PROJECT_NUMBER         = @VERSION@
 OUTPUT_DIRECTORY       = 
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
