@@ -1,4 +1,4 @@
-%define ver 0.1.5
+%define ver @VERSION@
 %define rel 1
 
 Summary:   user-friendly telnet client designed for BBS browsing.
